--- a/stcalander/templates/index.html
+++ b/stcalander/templates/index.html
@@ -48,7 +48,7 @@
     <div class="row">
         <div class="col-md-12">
             <label for="additional-info">Additional Information</label>
-            <textarea id="additional-info" class="form-control mb-2" placeholder="Additional Information" style="width: 100%; height: 100px;"></textarea>
+            <textarea id="additional-info" class="form-control mb-2" placeholder="Additional Information" style="height: 100px; width: 100%;"></textarea>
         </div>
     </div>
     <div class="row">
@@ -64,11 +64,37 @@
 {% block customCalJS %}
 <script>
     /*document.getElementById('logout-button').onclick = function() {
-        window.location.href = "{% url 'logout' %}";
+        window.location.href = "{% url namespace|add:'logout' %}";
     };*/
 
     $(document).ready(function() {
-        $('#event-info-dialog').draggable(); // Make the dialog draggable
+        // Draggable with proper settings to avoid cursor issues
+        $('#event-info-dialog').draggable({
+            containment: "window",
+            start: function(event, ui) {
+                // Store initial position
+                var left = parseInt($(this).css('left'), 10);
+                var top = parseInt($(this).css('top'), 10);
+                $(this).data('startLeft', left);
+                $(this).data('startTop', top);
+            },
+            drag: function(event, ui) {
+                // Adjust position based on the initial position to prevent jumping
+                var startLeft = $(this).data('startLeft');
+                var startTop = $(this).data('startTop');
+                ui.position.left = startLeft + (ui.position.left - ui.originalPosition.left);
+                ui.position.top = startTop + (ui.position.top - ui.originalPosition.top);
+            }
+        });
+
+        function centerDialog() {
+            $('#event-info-dialog').css({
+                display: 'block',
+                left: '50%',
+                top: '50%',
+                transform: 'translate(-50%, -50%)'
+            });
+        }
 
         var calendar = $('#calendar').fullCalendar({
             header: {
@@ -80,16 +106,11 @@
                 customCreateEvent: {
                     text: 'Create Event',
                     click: function() {
-                        $('#event-info-dialog').css({
-                            display: 'block',
-                            left: '50%',
-                            top: '50%',
-                            transform: 'translate(-50%, -50%)'
-                        });
+                        centerDialog();
                     }
                 }
             },
-            events: '/all_events/',
+            events: "{% url namespace|add:'all_events' %}",
             selectable: true,
             selectHelper: true,
             editable: true,
@@ -110,7 +131,7 @@
                 $('#additional-info').val('');
                 $('#deleteButton').hide();
                 window.currentEvent = { start: start, end: end };
-                $('#event-info-dialog').css('display', 'block');
+                centerDialog();
             },
             eventClick: function (event, jsEvent) {
                 jsEvent.preventDefault();
@@ -126,12 +147,12 @@
                 $('#additional-info').val(event.additional_info || '');
                 window.currentEvent = event;
                 $('#deleteButton').show();
-                $('#event-info-dialog').css('display', 'block');
+                centerDialog();
             },
             eventDrop: function(event, delta, revertFunc) {
                 $.ajax({
                     type: "POST",
-                    url: '/update/',
+                    url: "{% url namespace|add:'update' %}",
                     data: {
                         id: event.id,
                         title: event.title,
@@ -161,11 +182,7 @@
 
         $(window).resize(function() {
             if ($('#event-info-dialog').is(':visible')) {
-                $('#event-info-dialog').css({
-                    left: '50%',
-                    top: '50%',
-                    transform: 'translate(-50%, -50%)'
-                });
+                centerDialog();
             }
         });
 
@@ -201,7 +218,7 @@
 
             $.ajax({
                 type: "POST",
-                url: window.currentEvent.id ? '/update/' : '/add_event/',
+                url: window.currentEvent.id ? "{% url namespace|add:'update' %}" : "{% url namespace|add:'add_event' %}",
                 data: {
                     id: window.currentEvent.id,
                     title: $('#event-title').val(),
@@ -232,7 +249,7 @@
             if (confirm("Are you sure you want to delete this event?")) {
                 $.ajax({
                     type: "POST",
-                    url: '/remove/',
+                    url: "{% url namespace|add:'remove' %}",
                     data: {
                         id: window.currentEvent.id,
                         csrfmiddlewaretoken: '{{ csrf_token }}'
